--- a/css/style.css
+++ b/css/style.css
@@ -215,7 +215,13 @@ h1, h2, h3, h4, h5, h6 {
     top: 0;
   }
   #header .logo {
-    font-size: 28px;
+    font-size: 20px;
+  }
+}
+
+@media(max-width: 700px){
+  #header .logo{
+    font-size: 21px;
   }
 }
 
