--- a/css/style.css
+++ b/css/style.css
@@ -360,15 +360,15 @@ h1, h2, h3, h4, h5, h6 {
   transition: 0.3s;
   font-size: 14px;
   display: inline-block;
-  box-shadow: 0px 10px 1em 0em rgb(243, 5, 5);
-  transform: translateY(-0.25em);
+  box-shadow: 0px 5px 10px 0px rgb(243, 5, 5);
+  transform: translateY(-0.50em);
 }
 
 .appointment-btn:hover {
   background-color: white;
   color: rgb(131, 8, 8);
   border-top-color: 5px #424242;
-  box-shadow: 0 0.5px 2em 0em rgb(243, 5, 5);
+  box-shadow: 0 1px 0.5em 0em rgb(243, 5, 5);
   transform: translateY(-0.25em);
 }
 
