--- a/css/style.css
+++ b/css/style.css
@@ -236,6 +236,17 @@ h1, h2, h3, h4, h5, h6 {
 # Navigation Menu
 --------------------------------------------------------------*/
 /* Desktop Navigation */
+.nav-menu{
+  position: relative;
+  .line{
+    height: 12px;
+    position: absolute;
+    bottom:0;
+    margin:10px 0 0 0;
+    background: #0563bb;
+  }
+}
+
 .nav-menu ul {
   margin: 0;
   padding: 0;
@@ -360,8 +371,6 @@ h1, h2, h3, h4, h5, h6 {
   transition: 0.3s;
   font-size: 14px;
   display: inline-block;
-  box-shadow: 0px 5px 10px 0px rgb(243, 5, 5);
-  transform: translateY(-0.50em);
 }
 
 .appointment-btn:hover {
